environment_setup/modules/network/network_setup.tf
locals {
  github_cidrs = [
    "192.30.252.0/22",
    "185.199.108.0/22",
    "140.82.112.0/20",
    "143.55.64.0/20"
  ]
}


resource "aws_security_group" "jenkins_security_group" {
  name   = "jenkins_security_group_${var.env}"
  vpc_id = var.vpc_id


  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = local.github_cidrs
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }


}


resource "aws_security_group" "sonarqube_security_group" {
  name   = "sonarqube_security_group_${var.env}"
  vpc_id = var.vpc_id


  ingress {
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = local.github_cidrs
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_internet_gateway" "igw" {
  vpc_id = var.vpc_id
  tags = merge(var.common_tags, {
    Name    = "illuminati_vpc_IGW_${var.env}"
    Project = "Illuminati"
  })
}


resource "aws_subnet" "public_subnet" {
  vpc_id            = var.vpc_id
  cidr_block        = "10.0.1.0/24"
  availability_zone = var.availability_zone


  map_public_ip_on_launch = true


  tags = merge(var.common_tags, {
    Name = "public_${var.availability_zone}"
  })
}


resource "aws_route_table" "public_route_table" {
  vpc_id = var.vpc_id
  tags = merge(var.common_tags, {
    Name    = "public_route_table_${var.env}"
    Project = "Illuminati"
  })
}


resource "aws_route" "public_route" {
  route_table_id         = aws_route_table.public_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}

resource "aws_route_table_association" "public_subnet_association" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_route_table.id
}
